--- a/Mini Calculatrice.css
+++ b/Mini Calculatrice.css
@@ -8,9 +8,10 @@
 }
 .grid{
     display: grid;
-    grid-template-columns: 52px 52px 52px 52px;
-    grid-template-rows: auto;
-    padding: 10px 15px;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 5px;
+    /* grid-template-rows: auto; */
+    /* padding: 10px 15px; */
 }
 .flex{
     display: flex;
@@ -18,8 +19,11 @@
     flex-direction: column;
 }
 .btn{
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    font-size: larger;
+    padding-top: 18px;
     background-color: rgb(239, 84, 33);
     border-radius: 50%;
 }
@@ -48,15 +52,15 @@
 }
 .text {
     position: absolute;
-    background-color: rgb(83, 37, 37);
+    background-color: rgb(212, 203, 203);
     height: 30px;
     width: 100%;
     bottom: 0px;
 }
 .touche{
     /* position: relative; */
-    background-color: rgb(107, 93, 93);
-    height: 250px;
+    /* background-color: rgb(107, 93, 93); */
+    height: 340px;
     width: 240px;
 
 }
